# libnixxml

./: .gitignore  COPYING  Doxyfile  Makefile.am  README.md  configure.ac  release.nix
scripts/: Makefile.am  nixexpr2xml.in
src/: Doxyfile  Makefile.am  libnixxml-data.pc.in  libnixxml-glib.pc.in  libnixxml.pc.in
src/libnixxml/: Makefile.am  nixxml-generate-env-generic.c  nixxml-generate-env-generic.h  nixxml-generate-env.h  nixxml-node.c  nixxml-node.h  nixxml-object.c  nixxml-object.h  nixxml-parse-generic.c  nixxml-parse-generic.h  nixxml-parse.c  nixxml-parse.h  nixxml-print-generic-nix.c  nixxml-print-generic-nix.h  nixxml-print-generic-xml.c  nixxml-print-generic-xml.h  nixxml-print-nix.c  nixxml-print-nix.h  nixxml-print-xml.c  nixxml-print-xml.h  nixxml-print.c  nixxml-print.h  nixxml-types.h  nixxml-util.h
src/libnixxml-data/: Makefile.am  nixxml-ds.c  nixxml-ds.h  nixxml-ptrarray.c  nixxml-ptrarray.h  nixxml-xmlhashtable-scanner.c  nixxml-xmlhashtable-scanner.h  nixxml-xmlhashtable.c  nixxml-xmlhashtable.h
src/libnixxml-glib/: Makefile.am  nixxml-ghashtable-iter.c  nixxml-ghashtable-iter.h  nixxml-ghashtable.c  nixxml-ghashtable.h  nixxml-glib.c  nixxml-glib.h  nixxml-gptrarray.c  nixxml-gptrarray.h
src/nixxml-pp/: Makefile.am  main.c  pretty-print.c  pretty-print.h
src/prettyprint/: Makefile.am  main.c
tests/: Makefile.am
tests/draw/: Makefile.am  check-equal.sh  compare-draw.c  convert-xml.sh.in  dimensions.c  dimensions.h  draw-invalid.sh  draw-nix.sh  draw-png.sh  draw-wrong.sh  draw-xml.sh  draw.c  drawarray.c  drawarray.h  drawcommand.c  drawcommand.h  drawspec.c  drawspec.h  figure.c  figure.h  figurestable.c  figurestable.h  invalid.xml  main.c  metatable.c  metatable.h  tagsarray.c  tagsarray.h  test.nix  wrong.xml
tests/envtest/: Makefile.am  check-envvars.sh  main.c
tests/envtest-generic/: check-envvars.sh  main.c
tests/envtest-generic-glib/: check-envvars.sh  main.c
tests/envtest-glib/: Makefile.am  check-envvars.sh  main.c  test-envtest.sh
tests/generic/: Makefile.am  convert-xml.sh.in  setup.sh  test-ast.nix  test-identical-simple.sh  test-identical-verbose.sh  test-invalidtype.sh  test-invalidtype.xml
tests/pp-glib/: Makefile.am  convert-xml-simple.sh.in  convert-xml-verbose.sh.in  convert-xml.sh.in  main.c  pretty-print-glib.c  pretty-print-glib.h  test-ast.nix  test-identical-simple.sh  test-identical-verbose.sh  test-identical.sh  test-invalidtype.sh
tests/prettyprint/: Makefile.am  main.c
xsl/: Makefile.am  nix-xml-simplifier.xsl
